--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@auth/core": "^0.11.1",
     "@auth/prisma-adapter": "^1.0.1",
     "@prisma/client": "^5.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.4.10",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
@@ -20,9 +22,11 @@
     "clsx": "^2.0.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
+    "jotai": "^2.3.1",
     "lucide-react": "^0.265.0",
-    "next": "13.4.13",
+    "next": "13.4.12",
     "next-auth": "^0.0.0-manual.024ba3e6",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
