--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.4.10",
-    "@types/react": "18.2.20",
-    "@types/react-dom": "18.2.7",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -28,8 +28,8 @@
     "next-auth": "^0.0.0-manual.024ba3e6",
     "next-themes": "^0.2.1",
     "postcss": "8.4.27",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-lite-youtube-embed": "^2.3.52",
     "tailwind-merge": "^1.14.0",
